Project links color changed

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <nav class="navigation">
             <ul role="list" class="nav-list">
               <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Projects</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="/#about">About</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#contact">Contact</a></li>
               <li id="playground"><a href="#">Playground</a></li>
             </ul>
           </nav>
@@ -66,7 +66,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="about">
         <div class="container  padding-block-big">
           <div class="even-columns text-left">
             <div class="about-img-wrap">
@@ -105,7 +105,7 @@
         </div>
       </section>
 
-      <section class="bg-primary-400">
+      <section id="projects" class="bg-primary-400">
         <div class="container padding-block-big">
           <div>
             <p class="section-title | text-accent-clr fw-700 mb-small">Portfolio</p>
@@ -186,7 +186,7 @@
         </div>
       </section>
 
-      <section>
+      <section id="contact">
         <div class="container padding-block-big">
           <p class="section-title | text-accent-clr fw-700 mb-small">Contact</p>
         <h2 class="fs-secondary-heading mb-big">Don't be shy! Hit me up!</h2>
