Added id's to sections

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <nav class="navigation">
             <ul role="list" class="nav-list">
               <li><a href="#">Home</a></li>
-              <li><a href="/#about">About</a></li>
+              <li><a href="#about">About</a></li>
               <li><a href="#projects">Projects</a></li>
               <li><a href="#contact">Contact</a></li>
               <li id="playground"><a href="#">Playground</a></li>
