--- a/index.html
+++ b/index.html
@@ -220,6 +220,6 @@
       </div>
     </footer>
 
-    <script type="module" src="/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
