Added real projects

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="hero-img">
-              <img src="./assets/hero.jpg" alt="portrait image">
+              <img src="./assets/hero.jpeg" alt="portrait image">
             </div>
           </div>
 
@@ -93,11 +93,10 @@
               <p class="section-title | text-accent-clr fw-700 mb-small">About me</p>
               <h2 class=" fs-secondary-heading mb-big fs-600 fw-700">A Dedicated Front-End Developer based in Banjaluka, Bosnia&Herzegovina 📍</h2>
               <p class="fs-400 fw-500 ff-secondary text-secondary-clr">
-                As a Junior Front-End Developer, I possess an impressive arsenal of skills in HTML, CSS, JavaScript, React, Tailwind, 
-                and SCSS. I excel in designing and maintaining responsive websites that offer a smooth user experience.
-                 My expertise lies in crafting dynamic, engaging interfaces through writing clean and optimized code and 
-                 utilizing cutting-edge development tools and techniques. I am also a team player who thrives in collaborating
-                  with cross-functional teams to produce outstanding web applications.
+                Motivated and enthusiastic junior developer with a solid foundation in HTML, CSS, and JavaScript. 
+                Currently learning Angular to expand my skillset and build dynamic web applications. 
+                Familiar with Node.js and have used it in a few projects. 
+                Eager to gain professional experience and enhance my technical skills further.
                 </p>
             </div>
 
@@ -108,26 +107,27 @@
       <section id="projects" class="bg-primary-400">
         <div class="container padding-block-big">
           <div>
-            <p class="section-title | text-accent-clr fw-700 mb-small">Portfolio</p>
+            <p class="section-title | text-accent-clr fw-700 mb-small">Projects</p>
             <h2 class="mb-big fs-secondary-heading fs-600 fw-700">Each project is a unique piece of development 🧩</h2>
           </div>
-          <article class="project-article even-columns bg-primary-100 mb-large">
+
+          <article class="project-3 project-article even-columns  bg-primary-100 mb-large">
             <div class="project-preview">
             </div>
             <div>
-              <h3 class="fw-700">car rental</h3>
+              <h3 class="fw-700">Recipe app</h3>
               <p class="fw-500 text-secondary-clr ">
-                A car rental website is an online platform that allows users to rent cars for personal 
-                or business use. The website provides an interface for searching, comparing, and reserving cars.
+                Recipe app where you can search your favorite dishes and check out details about them.
               </p>
               <div class="project-tech mb-big">
                 <span class="fw-600">HTML</span>
                 <span class="fw-600">CSS</span>
-                <span class="fw-600">JavaScript</span>
+                <span class="fw-600">JS</span>
+                <span class="fw-600">Node</span>
               </div>
               <div class="links">
                 <div>
-                  <a href="#" class="fw-600 ">Code <img src="./assets/github-icon.svg" alt=""></a> 
+                  <a href="https://github.com/nivanovic7/recipeApp" class="fw-600 ">Code <img src="./assets/github-icon.svg" alt=""></a> 
                 </div>
                 <div>
                   <a href="#" class="fw-600 ">LiveDemo <img src="./assets/link-svgrepo-com.svg" alt=""></a>
@@ -135,23 +135,24 @@
               </div>
             </div>
           </article>
-
-          <article class="project-article even-columns columns-reverse bg-primary-100 mb-large">
+        
+          <article class="project-2 project-article even-columns columns-reverse bg-primary-100 mb-large">
             <div class="project-preview">
             </div>
             <div>
-              <h3 class="fw-700">car rental</h3>
+              <h3 class="fw-700">NODE AUTH</h3>
               <p class="fw-500 text-secondary-clr ">
-                A car rental website is an online platform that allows users to rent cars for personal 
-                or business use. The website provides an interface for searching, comparing, and reserving cars.
+                Simple auth website with login and signup system made with Node.
               </p>
               <div class="project-tech mb-big">
                 <span class="fw-600">HTML</span>
                 <span class="fw-600">CSS</span>
+                <span class="fw-600">JavaScript</span>
+                <span class="fw-600">Node</span>
               </div>
               <div class="links">
                 <div>
-                  <a href="#" class="fw-600 ">Code <img src="./assets/github-icon.svg" alt=""></a> 
+                  <a href="https://github.com/nivanovic7/quizGame" class="fw-600 ">Code <img src="./assets/github-icon.svg" alt=""></a> 
                 </div>
                 <div>
                   <a href="#" class="fw-600 ">LiveDemo <img src="./assets/link-svgrepo-com.svg" alt=""></a>
@@ -160,25 +161,28 @@
             </div>
           </article>  
 
-            <article class="project-article even-columns  bg-primary-100 mb-large">
+          
+
+            <article class="project-1 project-article even-columns bg-primary-100 mb-large">
               <div class="project-preview">
               </div>
               <div>
-                <h3 class="fw-700">car rental</h3>
+                <h3 class="fw-700">Single Page Application</h3>
                 <p class="fw-500 text-secondary-clr ">
-                  A car rental website is an online platform that allows users to rent cars for personal 
-                  or business use. The website provides an interface for searching, comparing, and reserving cars.
+                  A Single page app for deleting and adding custom items made with Vanilla JS and Node.
                 </p>
                 <div class="project-tech mb-big">
                   <span class="fw-600">HTML</span>
                   <span class="fw-600">CSS</span>
+                  <span class="fw-600">JavaScript</span>
+                  <span class="fw-600">Node</span>
                 </div>
                 <div class="links">
                   <div>
-                    <a href="#" class="fw-600 ">Code <img src="./assets/github-icon.svg" alt=""></a> 
+                    <a href="https://github.com/nivanovic7/scandiwebApp" class="fw-600 ">Code <img src="./assets/github-icon.svg" alt=""></a> 
                   </div>
                   <div>
-                    <a href="#" class="fw-600 ">LiveDemo <img src="./assets/link-svgrepo-com.svg" alt=""></a>
+                    <a href="#" class="fw-600 " disabled>LiveDemo <img src="./assets/link-svgrepo-com.svg" alt=""></a>
                   </div>
                 </div>
               </div>
