--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <h2 class=" fs-secondary-heading mb-big fs-600 fw-700">A Dedicated Front-End Developer based in Banjaluka, Bosnia&Herzegovina 📍</h2>
               <p class="fs-400 fw-500 ff-secondary text-secondary-clr">
                 Motivated and enthusiastic junior developer with a solid foundation in HTML, CSS, and JavaScript. 
-                Currently learning Angular to expand my skillset and build dynamic web applications. 
+                Currently learning React to expand my skillset and build dynamic web applications. 
                 Familiar with Node.js and have used it in a few projects. 
                 Eager to gain professional experience and enhance my technical skills further.
                 </p>
@@ -124,6 +124,8 @@
                 <span class="fw-600">CSS</span>
                 <span class="fw-600">JS</span>
                 <span class="fw-600">Node</span>
+              
+                
               </div>
               <div class="links">
                 <div>
@@ -149,6 +151,7 @@
                 <span class="fw-600">CSS</span>
                 <span class="fw-600">JavaScript</span>
                 <span class="fw-600">Node</span>
+
               </div>
               <div class="links">
                 <div>
