--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <li><img class="icon" aria-label="html" src="./assets/html.svg" alt="html icon"></li>
               <li><img class="icon" aria-label="css" src="./assets/css.svg" alt="css icon"></li>
               <li><img class="icon" aria-label="javascript" src="./assets/javascript.svg" alt="javascript icon"></li>
-              <li><img class="icon" aria-label="angular" src="./assets/angular.svg" alt="angular icon"></li>
+              <li><img class="icon" aria-label="angular" src="./assets/react-javascript-js-framework-facebook-svgrepo-com.svg" alt="angular icon"></li>
             </ul>
           </div>
         </div>
